--- a/index.html
+++ b/index.html
@@ -1049,13 +1049,13 @@
                                 <div class="service-desc">DMT Services</div>
                             </div>
                             
-                            <div class="service-card" data-service="aeps">
+                            <!-- <div class="service-card" data-service="aeps">
                                 <div class="service-icon">
                                     <i class="fas fa-university"></i>
                                 </div>
                                 <div class="service-name">AEPS Banking</div>
                                 <div class="service-desc">Banking Services</div>
-                            </div>
+                            </div> -->
                             
                             <div class="service-card" data-service="ecom">
                                 <div class="service-icon">
